--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -10,7 +10,7 @@
   <body>
     <p class="odd">Number 1 - I'm a class!</p>
     <div id="el2">Number 2 - I'm one ID.</div>
-    <p class="odd">Number 3 - I'm a class, but cooler!</p>
+    <p class="odd el3">Number 3 - I'm a class, but cooler!</p>
     <div id="el4">Number 4 - I'm another ID.</div>
     <p class="odd">Number 5 - I'm a class!</p>
   </body>
